--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
           directory: "./terraform"
           soft-fail: true
           output: "json"
+          api-token: BC_API_TOKEN
 workflows:
   bridgecrew-scan:
     jobs:
