--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - bridgecrew/scan:
           directory: "./terraform"
-          api-key-variable: $BC_API_TOKEN
+          api-key-variable: BC_API_TOKEN
 workflows:
   bridgecrew-scan:
     jobs:
