--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,19 @@
 version: 2.1
 orbs:
   bridgecrew: bridgecrew/bridgecrew@1.0.2
+jobs:
+  bridgecrew-commands:
+    - checkout
+    - bridgecrew/install
+    - bridgecrew/scan:
+        directory: "./terraform"
+        api-key-variable: BC_API_TOKEN
+        soft-fail: true
+        output: json
 workflows:
   bridgecrew-scan:
     jobs:
       - bridgecrew/bridgecrew_scan:
           directory: "./terraform"
           api-key-variable: BC_API_TOKEN
+      - bridgecrew-commands
