--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs:
   bridgecrew: bridgecrew/bridgecrew@1.0.2
 jobs:
+  machine: true
   bridgecrew-commands:
     - checkout
     - bridgecrew/install
