--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,16 @@ version: 2.1
 orbs:
   bridgecrew: bridgecrew/bridgecrew@1.0.2
 jobs:
-  machine: true
   bridgecrew-commands:
-    - checkout
-    - bridgecrew/install
-    - bridgecrew/scan:
-        directory: "./terraform"
-        api-key-variable: BC_API_TOKEN
-        soft-fail: true
-        output: json
+    machine: true
+    steps:
+      - checkout
+      - bridgecrew/install
+      - bridgecrew/scan:
+          directory: "./terraform"
+          api-key-variable: BC_API_TOKEN
+          soft-fail: true
+          output: json
 workflows:
   bridgecrew-scan:
     jobs:
