--- a/.github/workflows/or.yaml
+++ b/.github/workflows/or.yaml
@@ -12,7 +12,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      BC_API_URL: https://6f8fqk04b0.execute-api.us-west-2.amazonaws.com/v1/api/v1
+      BC_API_URL: https://iiw4bismy6.execute-api.us-west-2.amazonaws.com/v1/api/v1
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
