--- a/.github/workflows/or.yaml
+++ b/.github/workflows/or.yaml
@@ -19,5 +19,5 @@ jobs:
       id: Bridgecrew-file-scanner
       uses: bridgecrewio/bridgecrew-action@master
       with:
-        directory: terragoat/terraform/aws
+        directory: terraform/aws
         api-key: ${{ secrets.BRIDGECREW_API_KEY }}
