--- a/.github/workflows/or.yaml
+++ b/.github/workflows/or.yaml
@@ -11,13 +11,20 @@ jobs:
     runs-on: ubuntu-latest
     env:
       BC_API_URL: https://iiw4bismy6.execute-api.us-west-2.amazonaws.com/v1/api/v1
-      API_KEY_VARIABLE: ${{ secrets.BRIDGECREW_API_KEY }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+    - name: Scan IaC directory
+      id: Bridgecrew-directory-scanner
+      uses: bridgecrewio/bridgecrew-action@master
+      with:
+        directory: "terraform"
+        soft-fail: "true"
     - name: Scan IaC file
       id: Bridgecrew-file-scanner
       uses: bridgecrewio/bridgecrew-action@master
       with:
-        directory: terraform/aws
+        file: "./terraform/db-app.tf"
+        output: "json"
+        api-key: ${{ secrets.BRIDGECREW_API_KEY }}
