--- a/.github/workflows/or.yaml
+++ b/.github/workflows/or.yaml
@@ -21,10 +21,11 @@ jobs:
       with:
         directory: "terraform"
         soft-fail: "true"
+        api-key: ${{ secrets.BRIDGECREW_API_KEY }}
     - name: Scan IaC file
       id: Bridgecrew-file-scanner
       uses: bridgecrewio/bridgecrew-action@master
       with:
-        file: "./terraform/db-app.tf"
+        file: terraform/db-app.tf
         output: "json"
         api-key: ${{ secrets.BRIDGECREW_API_KEY }}
